<resources>
    <string name="app_name">MyCalculator</string>

    <!-- 電卓のボタン用テキスト -->
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_del">DEL</string>
    <string name="btn_add">＋</string>
    <string name="btn_sub">－</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_equal">＝</string>
    <string name="calculation_expression">%1$s %2$s</string>
    <style name="CalculatorButtonStyle">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">60dp</item>
        <item name="android:layout_weight">1</item>
        <item name="android:textSize">24sp</item>
        <item name="android:backgroundTint">@color/btn_number_bg</item>
        <item name="android:textColor">@color/btn_number_text</item>
    </style>
</resources>
